@@ -19,22 +19,7 @@
 
 #include <ags/audio/ags_synth_generator.h>
 
-#include <ags/util/ags_id_generator.h>
-
-#include <ags/object/ags_config.h>
-#include <ags/object/ags_plugin.h>
-#include <ags/object/ags_soundcard.h>
-
-#include <ags/thread/ags_timestamp.h>
-
-#include <ags/thread/file/ags_thread_file_xml.h>
-
-#include <ags/file/ags_file_stock.h>
-#include <ags/file/ags_file.h>
-#include <ags/file/ags_file_id_ref.h>
-#include <ags/file/ags_file_lookup.h>
-#include <ags/file/ags_file_launch.h>
-#include <ags/file/ags_file_link.h>
+#include <ags/libags.h>
 
 #include <ags/audio/ags_audio_signal.h>
 #include <ags/audio/ags_audio_buffer_util.h>
